--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.562.0",
+    "mysql2": "^3.16.1",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
